theme/academy_clean/style/academy.css
/********************************************************
**
** Theme name: Academy
** Creation Date: 22/03/11
** Author: Harcourts International Pty Ltd
** Author URI: http://www.academyrealestatetraining.com
**
*********************************************************/

a:link { transition: color .1s ease-out; }

a.logo {
    background: url([[pix:theme|logo]]) no-repeat 0 0 / 128px 42px;
    display: block;
    float: left;
    height: 42px;
    margin: 0;
    padding: 0;
    width: 158px;
}

body {
    background: url([[pix:theme|background]]) top left repeat fixed #203C62;
}

body.pagelayout-embedded {
    background: #fff;
    margin: 0;
    padding: 0;
}

body.pagelayout-embedded div#page {
    background: #fff;
    margin: 0;
    padding: 0;
    box-shadow: none;
}

header.custom_wide_menu {
    max-width: 1680px;
    margin: 0 auto;
    padding: 0 20px;
}
@media (min-width: 980px) {
    header.custom_wide_menu {
       margin-bottom: 6px;
   }
}

th, td, a img { border-width: 0; }
th, td { padding: 0.5em; }
p, fieldset, table, pre { margin-bottom: 1em; }

div#page {
  padding-bottom: 20px;
  background-color: white;
  box-shadow: 0 0 35px rgba(0,0,0,0.8);
}
@media (max-width: 980px) {
   div#page {
       padding: 0 .5em;
   }
}

/* Maintenance warning */
.errorbox.maintenancewarning {
    background-color: red;
    color: white;
    width: 60%;
    margin: 0 auto;
    padding: .5em;
    text-align: center;
    font-weight: bold;
}

/* Nav Bar */
.navbar {
  margin-bottom: 0;
}
.navbar-fixed-top {
    
}
.navbar-inverse .navbar-inner,
.navbar-inner {
  border: none;
  /*background: url([[pix:theme|background]]) top left repeat fixed #203C62;*/
}
.navbar-fixed-top .navbar-inner,
.navbar-static-top .navbar-inner {
  box-shadow: none;
}
.navbar .nav>li>a, .custom_wide_menu li a {
  display: block;
  width: auto;
  margin: 0;
  outline: 0;
  padding: 5px 15px 5px 5px;
  color: #ffffff;
  line-height: 1.8em;
  text-shadow: none;
}

/* Usermenu */
.jsenabled .navbar-inverse .usermenu .moodle-actionmenu.show {
  background-color: transparent;
}
.navbar-inverse .usermenu .moodle-actionmenu:hover .usertext {
    color: #fff;
}
.usermenu .moodle-actionmenu .toggle-display:hover .usertext {
    text-decoration: underline;
}

/* Breadcrumbs */
.breadcrumb {
  background: none;
  border-radius: 0;
  margin: 0;
  padding: 1em 0;
}
@media (max-width: 980px) {
   .breadcrumb {
       padding: .5em 0;
   }
}

.breadcrumb-button {
  margin-top: 1em;
}

/* Main Content */
.pagelayout-report #page-content #region-main {
    overflow-x: auto;
}

/* AV Gallery (Moodle Database)
---------------------------*/
.path-mod-data-view .media-library-single-template {
    text-align: left;
}

/* AV Gallery (HTML Block)
---------------------------*/
#page-center .block {
    background: none;
    border: none;
    box-shadow: none;
}
#page-center .block.block_html .content .no-overflow {
    min-width: 100%; /* Firefox fix for overflow: auto issue. */
}
.av-gallery ul {
    float: left;
    width: 30%;
    min-width: 170px;
    margin: 0;
    padding: 0;
}
.av-gallery ul li {
    margin: 0 .5em .5em 0;
    list-style: none;
}
.av-gallery ul li h2 {
    font-size: 1.2em;
    padding: 0;
    margin: 0;
}
.av-gallery ul li img {
    display: block;
    border: 1px solid #000;
}
.av-gallery ul li a:hover img {
    display: block;
    border: 1px solid #002e63;
}

/* dock left
---------------------------*/
#dock.dock.dock_left_vertical {  /* background style for dockpanel */
    background: #000;
    border: none;
}

.dockedtitle, .dockedtitle .activeitem { /* styles for docked item background */
    background: #fff;
    color: #333;
    border-right:  1px dashed #656565;
    border-left:  1px dashed #656565;
}

/*-- Lesson --
 * Must account for class differences between viewing content and editing content
 */
.path-mod-lesson .menu .menuwrapper {
    max-height: 900px; /*-- Overwrite default max-height of 500px --*/
}

.path-mod-lesson .box.contents img.left, .path-mod-lesson .box.edit_pages_box tbody img.left {
    float: left;
    margin: 0 15px 15px 0;
}

.path-mod-lesson .box.contents img.right, .path-mod-lesson .box.edit_pages_box tbody img.right {
    float: right;
    margin: 0 0 15px 15px;
}

/* Fix appearance of long multiple choice options. */
#page-mod-lesson-view .mform .fitem_fselect .fitemtitle {
    width:55%;
    padding: 5px 12px 5px 0;
    text-align:right;
    float:left;
}

.path-mod-lesson .correctanswer {
    margin: 1em auto;
    width: 100%;
    padding: 10px;
}

.path-mod-lesson .correctanswer .box.response { margin-top: 1em; font-weight: bold; }
.path-mod-lesson .correctanswer .box.response.correct{ color: #99CC66; }
.path-mod-lesson .correctanswer .box.response.incorrect{ color: #CC6666; }

.path-mod-lesson .answeroption { padding: 3px 0; }
.path-mod-lesson .answeroption .felement { padding: 5px; }
.path-mod-lesson .answeroption:hover {
    background-color: white;
    background-color: rgba(0%,18%,38%,0.1);
}
.path-mod-lesson .answeroption input { cursor: pointer; }
.path-mod-lesson .answeroption label { cursor: pointer; }

#page-mod-lesson-view .branchbuttoncontainer.horizontal { padding: 2em 0; }

#page-mod-lesson-view .fheader { display: none; }

/* Footer
---------------------------*/
#page-footer {     /* settings for footer container */
    position:relative;
    width: 100%;
    padding: 5px 0;
    color: #999;
    border-top: none;
}

#page-footer a:link {color: #eee; }
#page-footer a:visited {color: #ccc;}
#page-footer a:hover {color: #fff; }
#page-footer a:active {color:#fff; }

.helplink {
    padding-top: 5px;
}

#footer-wrapper {
    margin: auto;
    width: 960px;
    padding-left: 0 20px; /* Aligns content on iPad. */
}

#footnote {
    margin: 20px 0px;
    padding: 0px 5px;
    text-align: right;
}

.pagelayout-redirect {background-position:0 0;border-top:1px solid #853650;}
.pagelayout-redirect #content {margin-top:150px;}
/* ... */

